--- a/hamro.css
+++ b/hamro.css
@@ -177,7 +177,7 @@ h1 {
 }
 @media (max-width: 326px){
 	.welcome{
-		font-size: 1.9vh;
+		font-size: 1vh;
 		white-space: nowrap;
 	}
 }
@@ -187,6 +187,13 @@ h1 {
 	}
 }
 @media (max-width: 459px){
+	#dropdown{
+		width: 30%;
+		text-align: center;
+		
+	}
+}
+		@media (max-width: px){
 	#dropdown{
 		width: 30%;
 		text-align: center;
