--- a/hamro.css
+++ b/hamro.css
@@ -27,6 +27,9 @@ nav{
 	width: 90vh;
 	align-items: center;
 }
+.btns a:hover{
+	color: #0b894;
+}
 body{
 	height: 100vh;
 	width: 100vw;
@@ -111,6 +114,8 @@ h1 {
 }
 #dropdown{
 	display: none;
+	border: 2px solid white;
+	border-radius: 5px;
 }
 .drpbtn{
 	background: white;
